--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                 <p><a href="http://lasosearch.com">LASO</a> - Search and Compare State Bills with Ease.</p>
                 <p><a href="https://pypi.python.org/pypi/StructStream/">StructStream</a> - Python library to work with streaming or repeating data</p>
                 <p><a href="https://pypi.python.org/pypi/LiveMonitor/">LiveMonitor</a> - <a href="http://www.rbirm.us/LiveMonitor/">docs</a> - Python monitoring tool and api to help keep track of your hosts, services, and logs.</p>
+                <p><a href="https://github.com/birm/dbops">dbOps</a> - Python database tooklit for operations.</p>
             </div>
         </div>
     </section>
