--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 										<h2>Who am I</h2>
 									</header>
 									<p>I'm a Georgia Tech Graduate of Earth and Atmospheric Sciences with focused cousework in Computer Science and Mathematics. I did research in unsupervised machine learning (especially gmm, k-means, and NMF) and completed <a href="http://hdl.handle.net/1853/53728">my thesis</a> on analysis of biogeochemical cycling.</p>
-<p>Currently, I'm a DBA and web/php developer for a startup and am the senior Database Engineer on my team at Philips. In the not-too-distant past, I was co-webmaster for both Georgia Tech's RHA and SGA, <a href="http://nique.net/author/ryan-birmingham/">wrote for the paper</a>, sang, and cooked for/with friends.</p>
+<p>Currently, I'm a DBA and web/php developer for a startup and a Database Engineer / DevOps Engineer at Philips. In the not-too-distant past, I was co-webmaster for both Georgia Tech's RHA and SGA, <a href="http://nique.net/author/ryan-birmingham/">wrote for the paper</a>, sang, and cooked for/with friends.</p>
 								</div>
 							</section>
 
