--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 							<ul class="icons">
 								<li><a href="https://github.com/birm" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="http://www.facebook.com/rbirm" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://pypi.org/user/birm/" class="fa fa-code"><span class="label">Pypi</span></a></li>
 								<li><a href="https://www.linkedin.com/in/ryan-birmingham-825443122" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 						</div>
