typo fix in comment

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-    I didn't want to spend all day designing a site, so I ued this one.
+    I didn't want to spend all day designing a site, so I used this one.
 	Forty by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
