add writing section

--- a/index.html
+++ b/index.html
@@ -108,7 +108,11 @@
 										<h2>Who am I</h2>
 									</header>
 									<p>I'm a Georgia Tech Graduate of Earth and Atmospheric Sciences with focused cousework in Computer Science and Mathematics. I did research in unsupervised machine learning (especially gmm, k-means, and NMF) and completed <a href="http://hdl.handle.net/1853/53728">my thesis</a> on analysis of biogeochemical cycling.</p>
-<p>Currently, I'm a DBA and web/php developer for a startup and a Database Engineer / DevOps Engineer at Philips. I volunteer as a Business Plan Developer/Web Designer for <a href="http://www.gangalib.org">Ganga Library.</a> In the not-too-distant past, I was co-webmaster for both Georgia Tech's RHA and SGA, <a href="http://nique.net/author/ryan-birmingham/">wrote for the paper</a>, sang, and cooked for/with friends.</p>
+<p>Currently, I'm a DBA and web/php developer for a startup and a Database Engineer / DevOps Engineer at Philips. I volunteer as a Business Plan Developer/Web Designer for <a href="http://www.gangalib.org">Ganga Library.</a> In the not-too-distant past, I was co-webmaster for both Georgia Tech's RHA and SGA, sang, and cooked for/with friends.</p>
+								<header class="major">
+										<h2>What I write</h2>
+									</header>
+									<p>I'm trying to get back into nonfiction writing. Previously, I <a href="http://nique.net/author/ryan-birmingham/">wrote for the Technique Newspaper,</a> and now I'm working on some multidisciplinary articles as quick dives into particular topics, which I call primers. <a href="https://www.linkedin.com/today/author/0_2Vw2rTVvl2C5qzAULmJ9sB?trk=prof-sm">Some of my previous ones are on linkedin.</a> </p>
 								</div>
 							</section>
 
