--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/birm/RhelKick" class="link">RhelKick</a></h3>
-										<p>Generate and host a pxe server for RHEL-like distros.</p>
+										<h3><a href="http://www.rbirm.us/bop_server/" class="link">BOP</a></h3>
+										<p>Erlang-based remote messaging and task execution protocol. Loose coupling meets the wide internet with additional security.</p>
 									</header>
 								</article>
 								<article>
