--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/birm/dbops" class="link">dbops</a></h3>
+										<h3><a href="http://www.rbirm.us/dbops/" class="link">dbops</a></h3>
 										<p>Database Operations Toolkit.</p>
 									</header>
 								</article>
