--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>rbirm.us</strong> <span>by Ryan Birmingham</span></a>
+						<a href="index.html" class="logo">
+							<img src="images/rbirmus2.png" width="20px" style="position:relative; top:5px;">
+							<strong>rbirm.us</strong> <span>by Ryan Birmingham</span>
+						</a>
 					</header>
 
 				<!-- Banner -->
