update work, dbops->minimat

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="http://www.rbirm.us/dbops/" class="link">dbops</a></h3>
-										<p>Database Operations Toolkit.</p>
+										<h3><a href="http://www.rbirm.us/MiniMat/" class="link">MiniMat</a></h3>
+										<p>Matrix algebra in Javascript.</p>
 									</header>
 								</article>
 								<article>
@@ -112,7 +112,7 @@
 										<h2>Who am I</h2>
 									</header>
 									<p>I'm a Georgia Tech Graduate of Earth and Atmospheric Sciences with focused cousework in Computer Science and Mathematics. I did research in unsupervised machine learning (especially gmm, k-means, and NMF) and completed <a href="http://hdl.handle.net/1853/53728">my thesis</a> on analysis of biogeochemical cycling.</p>
-<p>Currently, I'm a DBA and web/php developer for a startup and a Database Engineer / DevOps Engineer at Philips. I volunteer as a Business Plan Developer/Web Designer for <a href="http://www.gangalib.org">Ganga Library.</a> In the not-too-distant past, I was co-webmaster for both Georgia Tech's RHA and SGA, sang, and cooked for/with friends.</p>
+<p>Currently, I'm a DBA and web/php developer for a startup and a Database Engineer / DevOps Engineer at Philips. I volunteer as a Business Plan Developer/Web Designer for Currently, I'm a DBA and web/php developer for a startup and a Full Stack Engineer for an imaging team within Emory. I volunteer as a Business Plan Developer/Web Designer for <a href="http://www.gangalib.org">Ganga Li<a href="http://www.gangalib.org">Ganga Library.</a> In the not-too-distant past, I was co-webmaster for both Georgia Tech's RHA and SGA, sang, and cooked for/with friends.</p>
 								<header class="major">
 										<h2>What I write</h2>
 									</header>
