--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="http://www.rbirm.us/bop_server/" class="link">BOP</a></h3>
-										<p>Erlang-based remote messaging and task execution protocol. Loose coupling meets the wide internet with additional security.</p>
+										<h3><a href="https://github.com/birm/HubSpokeSocket/" class="link">HubSpokeSocket</a></h3>
+										<p>Simple client javascript objects for communication across hosts.</p>
 									</header>
 								</article>
 								<article>
@@ -73,7 +73,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="http://mdb.rbirm.us/" class="link">medDB</a></h3>
-										<p>File dynamically-created medical charts.</p>
+										<p>File dynamically-created medical charts <b>Depreciated; may come down soon</b>.</p>
 									</header>
 								</article>
 								<article>
@@ -91,7 +91,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="http://tw.rbirm.us/" class="link">teamWORK</a></h3>
-										<p>Create teams, work, learn, get paid.</p>
+										<p>Create teams, work, learn, get paid. <b>Depreciated; may come down soon</b></p>
 									</header>
 								</article>
 								<article>
