--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 										<h2>Who am I</h2>
 									</header>
 									<p>I'm a Georgia Tech Graduate of Earth and Atmospheric Sciences with focused cousework in Computer Science and Mathematics. I did research in unsupervised machine learning (especially gmm, k-means, and NMF) and completed <a href="http://hdl.handle.net/1853/53728">my thesis</a> on analysis of biogeochemical cycling.</p>
-<p>Currently, I'm a DBA and web/php developer for a startup and a Database Engineer / DevOps Engineer at Philips. I volunteer as a Business Plan Developer/Web Designer for Currently, I'm a DBA and web/php developer for a startup and a Full Stack Engineer for an imaging team within Emory. I volunteer as a Business Plan Developer/Web Designer for <a href="http://www.gangalib.org">Ganga Li<a href="http://www.gangalib.org">Ganga Library.</a> In the not-too-distant past, I was co-webmaster for both Georgia Tech's RHA and SGA, sang, and cooked for/with friends.</p>
+									<p>Now, I work in the Department of Biomedical Informatics (BMI) at Emory, and am slowly working on a MSc in Mathematics.</p>
 								<header class="major">
 										<h2>What I write</h2>
 									</header>
