simplify my site instead of actually updating it

--- a/index.html
+++ b/index.html
@@ -49,49 +49,9 @@
 
 						<!-- One -->
 							<section id="one" class="tiles">
-								<article>
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
 									<header class="major">
-										<h3><a href="http://www.rbirm.us/MiniMat/" class="link">MiniMat</a></h3>
-										<p>Matrix algebra in Javascript.</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="https://github.com/birm/HubSpokeSocket/" class="link">HubSpokeSocket</a></h3>
-										<p>Simple client javascript objects for communication across hosts.</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="http://mdb.rbirm.us/" class="link">medDB</a></h3>
-										<p>File dynamically-created medical charts <b>Depreciated; may come down soon</b>.</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="http://forms.audio/" class="link">Forms.Audio</a></h3>
-										<p>Out of sight forms and charts.</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="http://tw.rbirm.us/" class="link">teamWORK</a></h3>
-										<p>Create teams, work, learn, get paid. <b>Depreciated; may come down soon</b></p>
+										<h3><a href="https://github.com/camicroscope" class="link">caMicroscope</a></h3>
+										<p>Tool for viewing, annotating, and analysis of cancer whole slide images.</p>
 									</header>
 								</article>
 								<article>
@@ -100,7 +60,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/birm?tab=repositories" class="link">More...</a></h3>
-										<p>Open source contributions and more</p>
+										<p>I tend to put my projects and contributions on github</p>
 									</header>
 								</article>
 							</section>
@@ -113,10 +73,7 @@
 									</header>
 									<p>I'm a Georgia Tech Graduate of Earth and Atmospheric Sciences with focused cousework in Computer Science and Mathematics. I did research in unsupervised machine learning (especially gmm, k-means, and NMF) and completed <a href="http://hdl.handle.net/1853/53728">my thesis</a> on analysis of biogeochemical cycling.</p>
 									<p>Now, I work in the Department of Biomedical Informatics (BMI) at Emory, and am slowly working on a MSc in Mathematics.</p>
-								<header class="major">
-										<h2>What I write</h2>
-									</header>
-									<p>I'm trying to get back into nonfiction writing. Previously, I <a href="http://nique.net/author/ryan-birmingham/">wrote for the Technique Newspaper,</a> and now I'm working on some multidisciplinary articles as quick dives into particular topics, which I call primers. <a href="https://www.linkedin.com/today/author/0_2Vw2rTVvl2C5qzAULmJ9sB?trk=prof-sm">Some of my previous ones are on linkedin.</a> </p>
+								
 								</div>
 							</section>
 
@@ -127,9 +84,6 @@
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="https://github.com/birm" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="http://www.facebook.com/rbirm" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="https://pypi.org/user/birm/" class="icon alt fa fa-code"><span class="label">Pypi</span></a></li>
-								<li><a href="https://www.npmjs.com/~birm" class="icon alt fa fa-code"><span class="label">NPM</span></a></li>
 								<li><a href="https://www.linkedin.com/in/ryan-birmingham-825443122" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 						</div>
