--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
 						<!-- One -->
 							<section id="one" class="tiles">
+								<article>
 									<header class="major">
 										<h3><a href="https://github.com/camicroscope" class="link">caMicroscope</a></h3>
 										<p>Tool for viewing, annotating, and analysis of cancer whole slide images.</p>
