--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 							<section id="one" class="tiles">
 								<article>
 									<header class="major">
+										<span class="image">
+											<img src="images/pic05.jpg" alt="" />
+										</span>
 										<h3><a href="https://github.com/camicroscope" class="link">caMicroscope</a></h3>
 										<p>Tool for viewing, annotating, and analysis of cancer whole slide images.</p>
 									</header>
