Some Update to about me, name

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 -->
 <html>
 	<head>
-		<title>Ryan Birmingham</title>
+		<title>Birm | Ryan Birmingham</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -33,7 +33,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>I'm Ryan Birmingham</h1>
+								<h1>I'm Birm (Ryan Birmingham)</h1>
 							</header>
 							<div class="content">
 								<p>And rbirm.us is my home. <br/>Unless you count Atlanta, which you probably should.</p>
@@ -75,8 +75,8 @@
 									<header class="major">
 										<h2>Who am I</h2>
 									</header>
-									<p>I'm a Georgia Tech Graduate of Earth and Atmospheric Sciences with focused cousework in Computer Science and Mathematics. I did research in unsupervised machine learning (especially gmm, k-means, and NMF) and completed <a href="http://hdl.handle.net/1853/53728">my thesis</a> on analysis of biogeochemical cycling.</p>
-									<p>Now, I work in the Department of Biomedical Informatics (BMI) at Emory, and am slowly working on a MSc in Mathematics.</p>
+									<p>I'm a Georgia Tech Graduate of Earth and Atmospheric Sciences with focused cousework in Computer Science, and have a MSc in Mathematics. I did research in unsupervised machine learning (especially gmm, k-means, and NMF) and completed <a href="http://hdl.handle.net/1853/53728">my thesis</a> on analysis of biogeochemical cycling.</p>
+									<p>Now, I work in the Department of Biomedical Informatics (BMI) at Emory.</p>
 								
 								</div>
 							</section>
