Update camic link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 										<span class="image">
 											<img src="images/pic05.jpg" alt="" />
 										</span>
-										<h3><a href="https://github.com/camicroscope" class="link">caMicroscope</a></h3>
+										<h3><a href="https://camicroscope.github.io/" class="link">caMicroscope</a></h3>
 										<p>Tool for viewing, annotating, and analysis of cancer whole slide images.</p>
 									</header>
 								</article>
