update personal detail section

--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
 									<header class="major">
 										<h2>Who am I</h2>
 									</header>
-									<p>I'm a Georgia Tech Graduate of Earth and Atmospheric Sciences with focused cousework in Computer Science, and have a MSc in Mathematics. I did research in unsupervised machine learning (especially gmm, k-means, and NMF) and completed <a href="http://hdl.handle.net/1853/53728">my thesis</a> on analysis of biogeochemical cycling.</p>
-									<p>Now, I work in the Department of Biomedical Informatics (BMI) at Emory.</p>
+									<p>I work in the Department of Biomedical Informatics (BMI) at Emory University.</p>
+									<p>My tentative personal academic interest is Human-Systems Interaction, including Interaction and Visualization Design, Informal Learning, and Artificial Intelligence Trust Calibration.</p>p>
+									<p>I'm a graduate of Georgia Tech with a Masters in CS with a focus in HCI and Machine Learning. My undergraduate was a Bachelors in Earth and Admospheric Science did research in unsupervised machine learning (especially gmm, k-means, and NMF) and completed <a href="http://hdl.handle.net/1853/53728">my thesis</a> on analysis of biogeochemical cycling. I also have a masters in Mathematics that I don't talk about much.</p>
 								
 								</div>
 							</section>
